--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
-    background-color: #05053a;
-    color: #fafaff;
+    background-color: #2eb3496a;
+    color: #020218;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     display: grid;
     place-content: center;
